Update Gitignore and Docs Requirements
Requirements was missing include-markdown-plugin and gitignore was missing site build files

--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ StreamMaster.Docs/venv/
 StreamMaster.Docs/.chatgpt-md-translator
 StreamMaster.Docs/.venv/
 streammasterwebui/stats.html
+StreamMaster.Docs/streammaster/site/*
