--- a/StreamMaster.Docs/requirements.txt
+++ b/StreamMaster.Docs/requirements.txt
@@ -14,6 +14,7 @@ mkdocs-get-deps==0.2.0
 mkdocs-material==9.5.31
 mkdocs-material-extensions==1.3.1
 mkdocs-static-i18n==1.2.3
+mkdocs-include-markdown-plugin==7.0.0
 packaging==24.1
 paginate==0.5.6
 pathspec==0.12.1
