--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -26,8 +26,12 @@ nav:
   - EPG/XML Files 📅: EPG.md
   - M3U Files 📜: M3U.md
   - StreamGroup 📺: StreamGroup.md
-  - Profiles 🧑‍💻: Profiles.md
+  - Profiles 🧑‍💻: 
+    - CommandProfiles.md
+    - OutputProfiles.md
   - Docs 📘: Docs.md
+  - M3U Output Attributes🎬: M3U_Output_Attributes
+    # - M3UGroupTitle.md
   - Contributors 🌟: Contributors.md
         
 plugins:
@@ -40,31 +44,31 @@ plugins:
           default: true
           name: English
           build: true
-        - locale: es
-          name: Spanish
-          build: true
-        - locale: fr
-          name: French
-          build: true
-        - locale: de
-          name: German
-          build: true
-        - locale: pt
-          name: Portuguese
-          build: true
-        - locale: da
-          name: Danish
-          build: true
-        - locale: sv
-          name: Swedish
-          build: true
-        - locale: nb
-          name: Norwegian Bokmål
-          build: true
-        - locale: fi
-          name: Finnish
-          build: true
-        - locale: is
-          name: Icelandic
-          build: true
+        # - locale: es
+        #   name: Spanish
+        #   build: true
+        # - locale: fr
+        #   name: French
+        #   build: true
+        # - locale: de
+        #   name: German
+        #   build: true
+        # - locale: pt
+        #   name: Portuguese
+        #   build: true
+        # - locale: da
+        #   name: Danish
+        #   build: true
+        # - locale: sv
+        #   name: Swedish
+        #   build: true
+        # - locale: nb
+        #   name: Norwegian Bokmål
+        #   build: true
+        # - locale: fi
+        #   name: Finnish
+        #   build: true
+        # - locale: is
+        #   name: Icelandic
+        #   build: true
 site_url: "https://senexcrenshaw.github.io/StreamMaster/"
