--- a/.github/workflows/staticPages.yml
+++ b/.github/workflows/staticPages.yml
@@ -39,10 +39,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install mkdocs
+          pip install mkdocs mkdocs-i18n mkdocs-material mkdocs-static-i18n mkdocs-include-markdown-plugin mkdocs-material mkdocs-material-extensions
 
       - name: Build site with mkdocs
-        run: mkdocs build
+        run: |
+          cd StreamMaster.Docs/streammaster
+          mkdocs build
+          
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
