--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -30,7 +30,7 @@ nav:
     - CommandProfiles.md
     - OutputProfiles.md
   - Docs 📘: Docs.md
-  - M3U Output Attributes🎬: M3U_Output_Attributes
+  - M3U Output Attributes🎬: M3U_Output_Attributes.md
     # - M3UGroupTitle.md
   - Contributors 🌟: Contributors.md
         
