fix: M3U Needs update logging docs: Added settings

--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
   - Profiles 🧑‍💻: 
     - CommandProfiles.md
     - OutputProfiles.md
+  - Settings ⚙️: Settings.md
   - Docs 📘: Docs.md
   - M3U Output Attributes🎬: M3U_Output_Attributes.md
     # - M3UGroupTitle.md
