--- a/DateTester/DateTester.csproj
+++ b/DateTester/DateTester.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
