--- a/StreamMaster.Domain/StreamMaster.Domain.csproj
+++ b/StreamMaster.Domain/StreamMaster.Domain.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="AspectInjector" Version="2.8.2" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Azure.Identity" Version="1.13.1" />
+    <PackageReference Include="Castle.Core" Version="5.1.1" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="MessagePack.Annotations" Version="2.5.192" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="9.0.0" />
