--- a/StreamMaster.API/logsettings.json
+++ b/StreamMaster.API/logsettings.json
@@ -7,7 +7,8 @@
       "Microsoft.AspNetCore.Http.Connections": "Warning",
       "Microsoft.EntityFrameworkCore.Query": "Warning",
       "System.Net.Http.HttpClient": "Warning",
-      "StreamMaster.Infrastructure.Authentication.ApiKeyAuthenticationHandler": "Warning"
+      "StreamMaster.Infrastructure.Authentication.ApiKeyAuthenticationHandler": "Warning",
+      "StreamMaster.Domain.Cache": "Debug"
     }
   }
 }
