fix: dupe channels added extif info for streams epg auto set

--- a/StreamMaster.EPG/StreamMaster.EPG.csproj
+++ b/StreamMaster.EPG/StreamMaster.EPG.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StreamMaster.SchedulesDirect.Domain\StreamMaster.SchedulesDirect.Domain.csproj" />
+    <ProjectReference Include="..\StreamMaster.Streams.Domain\StreamMaster.Streams.Domain.csproj" />
   </ItemGroup>
 
 </Project>
