--- a/Dockerfile.sm.template
+++ b/Dockerfile.sm.template
@@ -7,8 +7,6 @@ WORKDIR /src
 # Copy all files into the image
 COPY . .
 
-RUN cd fuse_middleman && make && make install && make clean
-
 # Step 1: Restore and build the .NET project with error-only output but keep echo messages
 RUN echo "Starting .NET restore..." && \
     dotnet restore "StreamMaster.API/StreamMaster.API.csproj" -a $TARGETARCH --verbosity m && \
@@ -40,4 +38,4 @@ RUN echo "Publishing .NET application..." && \
     echo ".NET publish completed successfully." || echo "Error during .NET publish!"
 
 # Clean up source files
-#RUN rm -rf /src
+RUN rm -rf /src
