--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -4,6 +4,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
+      "Microsoft.AspNetCore.Mvc.Formatters.XmlSerializerOutputFormatter":  "Error",
       "Microsoft.AspNetCore.SignalR": "Warning",
       "Microsoft.AspNetCore.Http.Connections": "Warning",
       "Microsoft.EntityFrameworkCore.Query": "Warning",
