--- a/StreamMaster.API/logsettings.json
+++ b/StreamMaster.API/logsettings.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.AspNetCore.Mvc.Formatters.XmlSerializerOutputFormatter": "Error",
       "Microsoft": "Warning",
       "Microsoft.AspNetCore.SignalR": "Warning",
       "Microsoft.AspNetCore.Http.Connections": "Warning",
