--- a/streammasterwebui/.vscode/launch.json
+++ b/streammasterwebui/.vscode/launch.json
@@ -1,19 +1,10 @@
 {
   "version": "0.2.0",
   "configurations": [
-    // {
-    //   "name": "Vite:server-side",
-    //   "type": "node-terminal",
-    //   "request": "launch",
-    //   "command": "npm run dev"
-    // },
-    // {
-    //   "name": "Vite:client-side",
-    //   "type": "chrome",
-    //   "request": "launch",
-    //   "url": "http://localhost:3000"
-    // },
     {
+      "env": {
+        "DEFAULT_PORT ": "7095"
+      },
       "name": "Full stack",
       "type": "node-terminal",
       "request": "launch",
